...
                </LinearLayout>
            </RelativeLayout>

        </com.example.android.architecture.blueprints.todoapp.ScrollChildSwipeRefreshLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_task_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:onClick="@{() -> viewmodel.addNewTask()}"
            android:src="@drawable/ic_add"
            android:visibility="@{viewmodel.tasksAddViewVisible ? View.VISIBLE : View.GONE}"
...
